--- a/web/index.html
+++ b/web/index.html
@@ -23,6 +23,9 @@
   <meta name="apple-mobile-web-app-title" content="agrargo">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Main Favicon -->
+  <link rel="icon" type="image/svg" sizes="88x74" href="icons/agrargo_logo.svg">
+
   <title>agrargo</title>
   <link rel="manifest" href="manifest.json">
 </head>
