ReadMe Update (deployment Infos)

--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,7 @@
 
   <!-- Main Favicon -->
   <link rel="icon" type="image/svg" sizes="88x74" href="icons/agrargo_logo.svg">
+  <link rel="icon" type="image/png" sizes="1,500x1,261" href="icons/agrargo_logo_large.svg">
 
   <title>agrargo</title>
   <link rel="manifest" href="manifest.json">
