--- a/web/index.html
+++ b/web/index.html
@@ -57,7 +57,7 @@
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
-
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 
   <script>
     var serviceWorkerVersion = null;
